--- a/frontend/labweb/src/app/components/shared/nav-bar/nav-bar.component.html
+++ b/frontend/labweb/src/app/components/shared/nav-bar/nav-bar.component.html
@@ -82,12 +82,12 @@
                 <a class="nav-link" [routerLink]="['login']">Iniciar Sesión <span class="sr-only">(current)</span></a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <!-- <form class="form-inline my-2 my-lg-0">
             <input #buscador class="form-control w-50 mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar" (keyup.enter)="buscarEquipo(buscador.value)" />
             <button (click)="buscarEquipo(buscador.value)" class="btn btn-outline-success" type="button">
                 Buscar
             </button>
-        </form>
+        </form> -->
     </div>
 </nav>
 <!-- Cierre de navegación -->
