Definiendo plantilla de pdf de los formatos RMA002, RMA004, RMA005, RMA006, RMA008, RMA009 y RMA010

--- a/frontend/labweb/src/app/components/new-rma002/new-rma002.component.html
+++ b/frontend/labweb/src/app/components/new-rma002/new-rma002.component.html
@@ -45,6 +45,9 @@
           <button class="btn btn-danger" (click)="borrarInfo(info)">
             <i class="fa fa-trash"></i>
           </button>
+          <button class="btn btn-primary ml-1" (click)="download(info)">
+            <i class="fa fa-download"></i>
+          </button>
         </td>
       </tr>
     </tbody>
