--- a/frontend/labweb/src/app/components/newinformemantenimiento/newinformemantenimiento.component.html
+++ b/frontend/labweb/src/app/components/newinformemantenimiento/newinformemantenimiento.component.html
@@ -42,9 +42,13 @@
             <i class="fa fa-pen"></i>
           </button>
 
-          <button class="btn btn-danger" (click)="borrarInfo(info)">
+          <button class="btn btn-danger mr-1" (click)="borrarInfo(info)">
             <i class="fa fa-trash"></i>
           </button>
+          <button class="btn btn-primary" (click)="download(info)">
+            <i class="fa fa-download"></i>
+          </button>
+
         </td>
       </tr>
     </tbody>
